--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,10 +1,15 @@
 footer {
+  .about {
+    font-size: 0.9rem;
+  }
   .info {
-    font-size: .9rem;
+    width: 100%;
+    height: 100px;
   }
 }
 
 .second-footer {
   background: darken($secondary, 20%);
-  font-size: .9rem;
+  font-size: 0.9rem;
+  text-align: center;
 }
